--- a/What_is_this_insect_application/app/src/main/AndroidManifest.xml
+++ b/What_is_this_insect_application/app/src/main/AndroidManifest.xml
@@ -67,7 +67,9 @@
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:screenOrientation="landscape"
+            android:exported="true"
+            tools:ignore="DiscouragedApi">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
