--- a/What_is_this_insect_application/app/src/main/AndroidManifest.xml
+++ b/What_is_this_insect_application/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_konomusi"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_konomusi"
+        android:roundIcon="@mipmap/ic_konomusi_round"
         android:supportsRtl="true"
         android:taskAffinity=""
         android:theme="@style/Theme.GestureRecognizer"
