音声の説明を強化しました.

--- a/What_is_this_insect_application/app/build.gradle
+++ b/What_is_this_insect_application/app/build.gradle
@@ -115,5 +115,5 @@ dependencies {
     // jsoup
     implementation files('libs/jsoup-1.18.1.jar')
     // lucene-gosen
-    implementation files('libs/lucene-gosen-2.1-dev-ipadic.jar')
+    implementation files('libs/lucene-gosen-4.10.0-naist-chasen.jar')
 }
